[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://tool/texture/heightmap.gdshader" type="Shader" id=2]
[ext_resource path="res://tool/terrain/terrain.gdshader" type="Shader" id=3]
[ext_resource path="res://tool/terrain/TerrainMesh.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/warping = 0.2
shader_param/x_shape = 0.4
shader_param/depth = 0.5
shader_param/min_range = 0.2
shader_param/max_range = 0.7

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/height_scale = 0.05

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 1, 1 )
subdivide_width = 1023
subdivide_depth = 1023
center_offset = Vector3( 0.5, 0, 0.5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureViewportContainer" type="ViewportContainer" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0

[node name="Viewport" type="Viewport" parent="TextureViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="TextureRect" type="TextureRect" parent="TextureViewportContainer/Viewport"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TerrainViewportContainer" type="ViewportContainer" parent="."]
margin_left = 1024.0
margin_right = 2048.0
margin_bottom = 1024.0

[node name="Viewport" type="Viewport" parent="TerrainViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="TerrainViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 2 )

[node name="TerrainMesh" type="MeshInstance" parent="TerrainViewportContainer/Viewport"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, -1, 0, -1 )
material_override = SubResource( 3 )
mesh = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="TerrainViewportContainer/Viewport"]
transform = Transform( 0.707107, 1.28028e-08, -0.707107, 0.707107, -3.09086e-08, 0.707107, -1.28028e-08, -1, -3.09086e-08, 0, 0, 0 )
